# django-style-guide-prac

./: .flake8  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  LICENSE  README.md  deploy.sh  docker-compose.yml  local.docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/workflows/: CD.yml  CI.yml  rebase_dependencies.yml
config/: env.py  root_urls.py  settings.py
config/django/: base.py  dev.py  local.py  prod.py
config/settings/: cors.py
docker/: Dockerfile  local.Dockerfile  prod.Dockerfile  web_entrypoin.sh
nginx/: default.conf
